# vascularsim

./: .gitignore  LICENSE  README.md  pyproject.toml
paper/: benchmark_all_tiers.json  ppo_vs_baselines.json  references.bib  run_experiments.py  training_curve.json  vascularsim.aux  vascularsim.bbl  vascularsim.blg  vascularsim.out  vascularsim.tex
src/vascularsim/: __init__.py  graph.py  viz.py
src/vascularsim/benchmarks/: __init__.py  environments.py  runner.py
src/vascularsim/data/: __init__.py  tubetk.py
src/vascularsim/envs/: __init__.py  flow_nav.py  magnetic_nav.py  vascular_nav.py  wrappers.py
src/vascularsim/physics/: __init__.py  hemodynamics.py  magnetic.py  surrogate.py
src/vascularsim/training/: evaluate.py  train.py
tests/: test_benchmarks.py  test_env.py  test_flow_nav.py  test_graph.py  test_hemodynamics.py  test_magnetic.py  test_magnetic_nav.py  test_surrogate.py  test_training.py
